Add heap structure and tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -66,6 +66,16 @@
             }
         },
         {
+            "label": "Heap:Run",
+            "args": [
+                "heap"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
             "label": "Clean",
             "args": [
                 "clean"
