Add functions to help string'fy enumerators

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -76,6 +76,16 @@
             }
         },
         {
+            "label": "Enum:Run",
+            "args": [
+                "enum"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
             "label": "Clean",
             "args": [
                 "clean"
