--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,17 +6,14 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "out": true
+        "out": false
     },
     "files.associations": {
         "*.h": "c"
     },
-    "terminal.integrated.rendererType": "dom",
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.detectIndentation": false,
-    "editor.formatOnSave": true,
-    "files.encoding": "windows1252",
-    "clang-format.fallbackStyle": "LLVM",
-    "clang-format.executable": "./LLVM/bin/clang-format.exe"
+    "editor.formatOnSave": false,
+    "files.encoding": "windows1252"
 }
